--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nezafoodaj"
         tools:targetApi="31">
+        <activity
+            android:name=".main.RecipeDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.AddRecipeActivity"
+            android:exported="false" />
         <activity
             android:name=".main.MainActivity"
             android:exported="false" />
