--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,25 +15,41 @@
         android:theme="@style/Theme.Nezafoodaj"
         tools:targetApi="31">
         <activity
-            android:name=".main.RecipeDetailActivity"
+            android:name=".activities.main.UserSettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".main.AddRecipeActivity"
+            android:name=".activities.main.RecipeDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".main.MainActivity"
+            android:name=".activities.main.AddRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.main.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".auth.AuthActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:name=".activities.auth.AuthActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
